--- a/style.css
+++ b/style.css
@@ -4,6 +4,42 @@
     box-sizing: border-box; 
 }
 
+
 .image1{
-    background-image:url(./img/bg.jpg) ;
+    background-image:url("./img/bg.jpg") ;
+    
+}
+.image2{
+    background-image: url("./img/bg1.jpg");
+}
+.image3{
+background-image: url("./img/bg2.jpg");
+}
+.image4{
+background-image: url("./img/bg3.jpg");
+}
+.image5{
+background-image: url("./img/bg4.jpg");
+}
+
+.parallax {
+    width: 100%;
+    height: 600px;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    opacity: 0.7;
+}
+.heading-container{
+    border-radius: 1.5rem 0;
+    padding: 2rem;
+    background-color: black;
+    color: white;
+    outline-offset: 1rem;
+    outline: 1rem inset purple;
+    width: 25rem;
 }
